# Perry

./: .gitignore  README.md  example_logger_usage.cpp
client/: CMakeLists.txt  example_configFile.yml  toolchain-mingw64.cmake
client/src/: config.cpp  config.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_bck.ui  utils.cpp  utils.h
client/src/widgets/: chatMessageWidget.h  chatMessageWidget.ui
client/src/workers/: periodic_10.cpp  periodic_10.h  socket_reader.cpp  socket_reader.h  socket_sender.cpp  socket_sender.h  voice_chat.cpp  voice_chat.h  voice_input.cpp  voice_input.h  voice_output.cpp  voice_output.h
common/: common_data.h  crossSockets.cpp  crossSockets.h  logger.cpp  logger.h  packets.cpp  packets.h
server/: CMakeLists.txt  docker-compose.yml  example_configFile.yml
server/lib/: DbManager.cpp  DbManager.h
server/src/: audio_server.cpp  audio_server.h  config.cpp  config.h  main.cpp  utils.cpp  utils.h
